--- a/index.html
+++ b/index.html
@@ -1,43 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>On-Tour | Coming Soon</title>
+  <link href="https://fonts.googleapis.com/css?family=Segoe+UI:400,700,900&display=swap" rel="stylesheet">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      width: 100vw;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      color: #fff;
+      background: #222;
+      overflow: hidden;
+    }
+    body {
+      background: url('Rio Beach Concert.png') center center / cover no-repeat;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      position: relative;
+      min-height: 100vh;
+      width: 100vw;
+    }
+    .branding {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 2rem 2.5rem;
+      z-index: 2;
+      text-align: left;
+    }
+    .branding h1 {
+      font-weight: 900;
+      letter-spacing: 2px;
+      margin: 0 0 0.2em 0;
+      font-size: 3.5rem;
+      line-height: 1.1;
+    }
+    .branding p {
+      font-weight: 400;
+      font-size: 1.5rem;
+      opacity: 0.85;
+      margin: 0;
+    }
+    .main-content {
+      position: absolute;
+      top: 50%;
+      right: 10%;
+      transform: translateY(-40%);
+      width: 45vw;
+      max-width: 700px;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      background: rgba(0,0,0,0.0);
+    }
+    .main-content h2 {
+      font-weight: 700;
+      margin-bottom: 1.2em;
+      text-align: left;
+      font-size: 2rem;
+      line-height: 1.3;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
+    }
+    .main-content p {
+      margin-bottom: 2em;
+      text-align: left;
+      font-size: 1.2rem;
+      line-height: 1.5;
+      color: #bfc9d1;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
+      max-width: 600px;
+    }
+    .coming-soon {
+      position: absolute;
+      top: 24px;
+      right: 40px;
+      background: #222a36;
+      color: #ffb347;
+      padding: 10px 28px;
+      border-radius: 20px;
+      font-weight: bold;
+      font-size: 1.1em;
+      letter-spacing: 1px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      z-index: 10;
+    }
+    @media (max-width: 900px) {
+      .main-content { width: 70vw; right: 5%; }
+      .branding { padding: 1.2rem 1.5rem; }
+    }
+    @media (max-width: 600px) {
+      .branding h1 { font-size: 2.2rem; }
+      .branding p { font-size: 1rem; }
+      .main-content { width: 90vw; right: 2%; }
+      .main-content h2 { font-size: 1.2rem; }
+      .main-content p { font-size: 1rem; }
+      .coming-soon { right: 10px; top: 10px; padding: 6px 12px; font-size: 1em; }
+    }
+  </style>
+</head>
+<body>
+  <div class="coming-soon">Coming Soon</div>
+  <div class="branding">
+    <h1>On-Tour</h1>
+    <p>Explore and experience the world...</p>
+  </div>
+  <div class="main-content">
+    <h2>Discover amazing concerts and plan and customize perfect trips to see your favorite artists.</h2>
+    <p>We use a deep understanding of how you like to travel and the artists you love to make sure you never miss a show and to discover events happening wherever your travels take you.</p>
+  </div>
+</body>
+</html> 
